# rust_axum_sample

./: .env  Cargo.toml  compose.yaml  thunder-collection_rust_axum_sample.json
src/: lib.rs  main.rs
src/routes/: middleware_message.rs  mirror_user_agent.rs  mod.rs  query_params.rs  return_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
src/routes/database_practice/: atomic_update.rs  create_task.rs  custom_json_extractor.rs  delete_task.rs  get_one_task.rs  get_task.rs  mod.rs  partial_update.rs
src/routes/simple_route_practice/: always_errors.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_custom_header.rs  mod.rs  path_variables.rs
